patch applied https://bugs.eclipse.org/bugs/show_bug.cgi?id=264564